upload all files

--- a/products/blackening/index.html
+++ b/products/blackening/index.html
@@ -242,7 +242,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Cold Immersion</span><span class="badge">Uniform Finish</span></div>
           <h3 data-i18n-key="bc_title">รมดำสำหรับทองเหลือง/ทองแดง</h3>
-          <p data-i18n-key="bc_desc">ผสมกับน้ำสะอาดและจุ่มโดยไม่ต้องใช้ไฟหรือให้ความร้อน เกิดชั้นดำสม่ำเสมอทั้งชิ้น ขัดเผยลายทองแดง/ทองเหลืองได้ตามต้องการ จากนั้นเคลือบแลคเกอร์หรือน้ำมันเพื่อปิดผิว.</p>
+          <p data-i18n-key="bc_desc">ผสมกับน้ำสะอาดและจุ่มโดยไม่ต้องใช้ไฟหรือให้ความร้อน เกิดชั้นดำสม่ำเสมอทั้งชิ้น ขัดเผยลายทองแดง/ทองเหลืองได้ตามต้องการ จากนั้นเคลือบแลคเกอร์หรือน้ำมันเพื่อปิดผิว</p>
           <a class="more" href="troubleshootingblackening.html#brass-copper" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -253,7 +253,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Steel</span><span class="badge">Low-Temp</span></div>
           <h3 data-i18n-key="steel_title">รมดำสำหรับเหล็ก</h3>
-          <p data-i18n-key="steel_desc">กระบวนการจุ่มเย็น ใช้งานง่าย สีดำสม่ำเสมอทั่วผิวชิ้นงาน สามารถขัดเผยเนื้อเหล็กเพื่อสร้างเอฟเฟกต์ และปิดผิวด้วยแลคเกอร์หรือน้ำมันภายหลัง.</p>
+          <p data-i18n-key="steel_desc">กระบวนการจุ่มเย็น ใช้งานง่าย สีดำสม่ำเสมอทั่วผิวชิ้นงาน สามารถขัดเผยเนื้อเหล็กเพื่อสร้างลวดลาย และปิดผิวด้วยแลคเกอร์หรือน้ำมันภายหลัง</p>
           <a class="more" href="troubleshootingblackening.html#steel" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -264,7 +264,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Zinc</span><span class="badge">Uniform Oxide</span></div>
           <h3 data-i18n-key="zinc_title">รมดำสำหรับซิงค์ฉีด</h3>
-          <p data-i18n-key="zinc_desc">จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานซิงค์ฉีดหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน.</p>
+          <p data-i18n-key="zinc_desc">จุ่มเย็น สีดำเรียบเนียน เหมาะกับชิ้นงานซิงค์ฉีดหรือโลหะผสมสังกะสี สามารถปิดผิวด้วยแลคเกอร์/น้ำมันเพื่อยืดอายุการใช้งาน</p>
           <a class="more" href="troubleshootingblackening.html#zinc" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -275,7 +275,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Aluminium</span><span class="badge">Room-Temp</span></div>
           <h3 data-i18n-key="al_title">รมดำสำหรับอลูมิเนียม</h3>
-          <p data-i18n-key="al_desc">สารเข้มข้นต้องเจือจาง ใช้ที่อุณหภูมิห้อง 15–27°C (ไม่เกิน 30°C) เพื่อหลีกเลี่ยงการกัดผิวมากเกินไป ให้ชั้นดำสม่ำเสมอบนอลูมิเนียม.</p>
+          <p data-i18n-key="al_desc">การรมดำบนอลูมิเนียมเป็นการปรับปรุงพื้นผิวให้มีสีดำด้านหรือสีดำออกเทา เพื่อเพิ่มความสวยงามและเพิ่มคุณสมบัติการป้องกันการกัดกร่อน</p>
           <a class="more" href="troubleshootingblackening.html#aluminium" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -286,7 +286,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Patina</span><span class="badge">Aged Look</span></div>
           <h3 data-i18n-key="patina_title">สารทำพาทินา (Patina)</h3>
-          <p data-i18n-key="patina_desc">เร่งปฏิกิริยาออกซิเดชันบนผิวทองแดง/ทองเหลืองให้เกิดชั้นสีเขียวแบบธรรมชาติ เหมาะกับงานศิลป์ จิวเวลรี่ และสถาปัตยกรรม ลดเวลาจากหลายปีเหลือไม่กี่ชั่วโมง/วัน.</p>
+          <p data-i18n-key="patina_desc">เร่งปฏิกิริยาออกซิเดชันบนผิวทองแดง/ทองเหลืองให้เกิดชั้นสีเขียวแบบธรรมชาติ เหมาะกับงานศิลป์ จิวเวลรี่ และสถาปัตยกรรม ลดเวลาจากหลายปีเหลือไม่กี่ชั่วโมง/วัน</p>
           <a class="more" href="troubleshootingpatina.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
