--- a/products/blackening/troubleshootingblackening.html
+++ b/products/blackening/troubleshootingblackening.html
@@ -203,7 +203,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/blackening/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">การรมดำเย็น (Cold Blackening)</h1>
       <p data-i18n-key="hero_tagline">หลักการทำงาน ข้อดี–ข้อเสีย การใช้งาน อัตราส่วน ขั้นตอน อุปกรณ์ และข้อเสนอแนะสำหรับการจุ่มดำโลหะที่อุณหภูมิห้อง</p>
@@ -314,7 +314,7 @@
           </table>
         </div>
 
-        <p class="lead" data-i18n-key="make_steps_h">วิธีเตรียม</p>
+        <h3 class="features__title" data-i18n-key="make_steps_h">วิธีเตรียม</h3>
         <div class="content">
           <ul>
             <li data-i18n-key="make_s1">เติมน้ำสะอาดลงถังประมาณ 80% ของปริมาตร</li>
@@ -325,74 +325,74 @@
         </div>
       </section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: ขั้นตอนการทำงาน</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="proc_1">เตรียมชิ้นงานให้สะอาด ปราศจากคราบไขมัน</li>
-            <li data-i18n-key="proc_2">จุ่มในน้ำยาจุ่มดำโลหะจนได้สีที่ต้องการ (30–120 วินาทีโดยทั่วไป)</li>
-            <li data-i18n-key="proc_3">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_4">เป่าหรืออบให้แห้ง</li>
-            <li data-i18n-key="proc_5">ปัด/ขัดขึ้นเงา และเคลือบเงาได้ตามต้องการ</li>
-          </ul>
-        </div>
-      </section>
+<!-- Process -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: ขั้นตอนการทำงาน</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="proc_1">เตรียมชิ้นงานให้สะอาดปราศจากคราบไขมัน น้ำมัน และสิ่งสกปรก อาจใช้ดีกรรีสเซอร์หรือล้างด่างอ่อน หากผิวไม่สะอาด สีจะด่างหรือติดไม่สม่ำเสมอ</li>
+      <li data-i18n-key="proc_2">จุ่มในน้ำยารมดำที่อุณหภูมิห้องเป็นเวลา 30–120 วินาที โดยทั่วไปสีจะพัฒนาใน 1–2 นาที เมื่อได้สีตามต้องการให้ยกขึ้นทันที</li>
+      <li data-i18n-key="proc_3">ล้างน้ำสะอาดให้ทั่วถึงเพื่อหยุดปฏิกิริยาของสารเคมี</li>
+      <li data-i18n-key="proc_4">ทำให้แห้งด้วยการเป่าลมหรืออบจนแห้งสนิท</li>
+      <li data-i18n-key="proc_5">ปัดหรือขัดขึ้นเงาตามต้องการ แล้วเคลือบด้วยน้ำมันหรือแลคเกอร์เพื่อเพิ่มการปกป้อง</li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Conditions & Equipment -->
-      <section id="conditions" class="reveal section-block" aria-labelledby="cond-h">
-        <h2 id="cond-h" class="section" data-i18n-key="cond_h">ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น</h2>
+<!-- Conditions & Equipment -->
+<section id="conditions" class="reveal section-block" aria-labelledby="cond-h">
+  <h2 id="cond-h" class="section" data-i18n-key="cond_h">ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น</h2>
 
-        <p class="lead" data-i18n-key="cond_params_h">สภาพการทำงาน</p>
-        <div class="table">
-          <table>
-            <thead>
-              <tr>
-                <th data-i18n-key="cond_th_param">พารามิเตอร์</th>
-                <th data-i18n-key="cond_th_rec">ค่าแนะนำ</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td data-i18n-key="cond_temp">อุณหภูมิ</td>
-                <td data-i18n-key="cond_temp_v">อุณหภูมิห้อง (≈ 20–30 °C)</td>
-              </tr>
-              <tr>
-                <td data-i18n-key="cond_time">เวลาแช่</td>
-                <td data-i18n-key="cond_time_v">30–120 วินาที (ถ้านานขึ้น เติมน้ำยาเพิ่ม ~20%)</td>
-              </tr>
-              <tr>
-                <td data-i18n-key="cond_material">วัสดุชิ้นงาน</td>
-                <td data-i18n-key="cond_material_v">เหล็ก ทองแดง ทองเหลือง (ต้องทำความสะอาดผิวอย่างดี)</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+  <h3 class="features__title" data-i18n-key="cond_params_h">สภาพการทำงาน</h3>
+  <div class="table">
+    <table>
+      <thead>
+        <tr>
+          <th data-i18n-key="cond_th_param">พารามิเตอร์</th>
+          <th data-i18n-key="cond_th_rec">ค่าแนะนำ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-i18n-key="cond_temp">อุณหภูมิ</td>
+          <td data-i18n-key="cond_temp_v">อุณหภูมิห้อง (ประมาณ 20–30 °C)</td>
+        </tr>
+        <tr>
+          <td data-i18n-key="cond_time">เวลาแช่</td>
+          <td data-i18n-key="cond_time_v">30–120 วินาที หากต้องแช่นานขึ้นหรือปริมาณงานมาก ให้เติมน้ำยาเพิ่มประมาณ 20% เพื่อรักษาสมดุล</td>
+        </tr>
+        <tr>
+          <td data-i18n-key="cond_material">วัสดุชิ้นงาน</td>
+          <td data-i18n-key="cond_material_v">เหล็ก ทองแดง ทองเหลือง ต้องทำความสะอาดผิวอย่างดีก่อนจุ่ม</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-        <p class="lead" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</p>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="equip_1">ถังชุบ: พลาสติก/ถังบุ PE หรือ PP (ทนสารออกซิไดซ์)</li>
-            <li data-i18n-key="equip_2">บ่อ/ถังล้างน้ำสะอาด และระบบเป่า/อบแห้ง</li>
-            <li data-i18n-key="equip_3">อุปกรณ์คีบ/แขวนชิ้นงานที่ทนสารเคมี</li>
-            <li data-i18n-key="equip_4">ถังกลิ้ง (สำหรับชิ้นงานขนาดเล็ก)</li>
-          </ul>
-        </div>
-      </section>
+  <h3 class="features__title" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</h3>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="equip_1">ถังชุบพลาสติก PP หรือ PE ที่ทนสารออกซิไดซ์</li>
+      <li data-i18n-key="equip_2">บ่อล้างน้ำสะอาดและระบบเป่าลมหรือตู้อบสำหรับทำแห้ง</li>
+      <li data-i18n-key="equip_3">อุปกรณ์คีบหรือแขวนชิ้นงานที่ทนสารเคมี</li>
+      <li data-i18n-key="equip_4">ถังกลิ้งสำหรับชิ้นงานขนาดเล็กจำนวนมากเพื่อให้รมดำทั่วถึง</li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Notes (reuse id 'anode' to keep structure) -->
-      <section id="anode" class="reveal section-block" aria-labelledby="anode-h">
-        <h2 id="anode-h" class="section" data-i18n-key="anode_h">ข้อเสนอแนะ & ข้อควรระวัง</h2>
-        <div class="content">
-          <p data-i18n-key="note_oxid">น้ำยามีสารออกซิไดซ์ ควรใช้ถังและอุปกรณ์ที่ทนกรด เช่น พลาสติก PE/PP และปฏิบัติตามความปลอดภัยในการทำงานกับสารเคมี</p>
+<!-- Notes -->
+<section id="anode" class="reveal section-block" aria-labelledby="anode-h">
+  <h2 id="anode-h" class="section" data-i18n-key="anode_h">ข้อเสนอแนะและข้อควรระวัง</h2>
+  <div class="content">
+    <p data-i18n-key="note_oxid">น้ำยารมดำมีสารออกซิไดซ์และมีฤทธิ์กัดกร่อน ควรทำงานในที่ระบายอากาศดีและสวมอุปกรณ์ป้องกันส่วนบุคคล เช่น ถุงมือและแว่นตานิรภัย</p>
 
-          <p class="lead" data-i18n-key="note_overdip_h">ข้อควรระวังการแช่นานเกินไป</p>
-          <p data-i18n-key="note_overdip_p">หากจุ่มนานเกินไปจะเกิดฟิล์มออกไซด์เป็นเขม่าติดมือ เนื่องจากปฏิกิริยามากเกินไป ให้ลดเวลาในการจุ่มลง</p>
+    <p class="lead" data-i18n-key="note_overdip_h">ข้อควรระวังเรื่องการแช่นานเกินไป</p>
+    <p data-i18n-key="note_overdip_p">หากแช่นานเกินไปอาจเกิดฟิล์มออกไซด์เป็นเขม่าที่หลุดติดมือได้ แสดงว่าปฏิกิริยามากเกินไป ควรลดเวลาในการจุ่มให้สั้นลง</p>
 
-          <p class="lead" data-i18n-key="note_use_h">การนำไปใช้แนะนำ</p>
-          <p data-i18n-key="note_use_p">เหมาะกับงานสวยงามและกันสนิมปานกลาง เช่น ผิวปืน มีด ชิ้นส่วนเครื่องจักรเล็ก ๆ โคมไฟ อุปกรณ์เฟอร์นิเจอร์ และงานพระเครื่อง</p>
-        </div>
-      </section>
+    <p class="lead" data-i18n-key="note_use_h">การนำไปใช้งานที่แนะนำ</p>
+    <p data-i18n-key="note_use_p">เหมาะกับงานที่ต้องการผิวสวยงามและกันสนิมปานกลาง เช่น ผิวปืน มีด ชิ้นส่วนเครื่องจักร โคมไฟ อุปกรณ์เฟอร์นิเจอร์ และงานพระเครื่อง</p>
+  </div>
+</section>
 
     </article>
   </main>
@@ -493,32 +493,36 @@
         make_s3:"ปรับปริมาตรด้วยน้ำจนได้ 1 ลิตร",
         make_warn:"หากต้องการเวลาแช่นานขึ้น ให้เติมน้ำยาเพิ่ม ~20% เพื่อคงความเข้มของสี",
 
-        process_h:"ส่วนที่ 2: ขั้นตอนการทำงาน",
-        proc_1:"เตรียมชิ้นงานให้สะอาด ปราศจากคราบไขมัน",
-        proc_2:"จุ่มในน้ำยาจุ่มดำโลหะจนได้สีที่ต้องการ (30–120 วินาทีโดยทั่วไป)",
-        proc_3:"ล้างน้ำสะอาด",
-        proc_4:"เป่าหรืออบให้แห้ง",
-        proc_5:"ปัด/ขัดขึ้นเงา และเคลือบเงาได้ตามต้องการ",
+      process_h: "ส่วนที่ 2: ขั้นตอนการทำงาน",
+      proc_1: "เตรียมชิ้นงานให้สะอาดปราศจากคราบไขมัน น้ำมัน และสิ่งสกปรก อาจใช้ดีกรรีสเซอร์หรือล้างด่างอ่อน หากผิวไม่สะอาด สีจะด่างหรือติดไม่สม่ำเสมอ",
+      proc_2: "จุ่มในน้ำยารมดำที่อุณหภูมิห้องเป็นเวลา 30–120 วินาที โดยทั่วไปสีจะพัฒนาใน 1–2 นาที เมื่อได้สีตามต้องการให้ยกขึ้นทันที",
+      proc_3: "ล้างน้ำสะอาดให้ทั่วถึงเพื่อหยุดปฏิกิริยาของสารเคมี",
+      proc_4: "ทำให้แห้งด้วยการเป่าลมหรืออบจนแห้งสนิท",
+      proc_5: "ปัดหรือขัดขึ้นเงาตามต้องการ แล้วเคลือบด้วยน้ำมันหรือแลคเกอร์เพื่อเพิ่มการปกป้อง",
 
-        cond_h:"ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น",
-        cond_params_h:"สภาพการทำงาน",
-        cond_th_param:"พารามิเตอร์", cond_th_rec:"ค่าแนะนำ",
-        cond_temp:"อุณหภูมิ", cond_temp_v:"อุณหภูมิห้อง (≈ 20–30 °C)",
-        cond_time:"เวลาแช่",  cond_time_v:"30–120 วินาที (ถ้านานขึ้น เติมน้ำยาเพิ่ม ~20%)",
-        cond_material:"วัสดุชิ้นงาน", cond_material_v:"เหล็ก ทองแดง ทองเหลือง (ต้องทำความสะอาดผิวอย่างดี)",
+      cond_h: "ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น",
+      cond_params_h: "สภาพการทำงาน",
+      cond_th_param: "พารามิเตอร์",
+      cond_th_rec: "ค่าแนะนำ",
+      cond_temp: "อุณหภูมิ",
+      cond_temp_v: "อุณหภูมิห้อง (ประมาณ 20–30 °C)",
+      cond_time: "เวลาแช่",
+      cond_time_v: "30–120 วินาที หากต้องแช่นานขึ้นหรือปริมาณงานมาก ให้เติมน้ำยาเพิ่มประมาณ 20% เพื่อรักษาสมดุล",
+      cond_material: "วัสดุชิ้นงาน",
+      cond_material_v: "เหล็ก ทองแดง ทองเหลือง ต้องทำความสะอาดผิวอย่างดีก่อนจุ่ม",
 
-        equip_h:"อุปกรณ์ที่จำเป็น",
-        equip_1:"ถังชุบ: พลาสติก/ถังบุ PE หรือ PP (ทนสารออกซิไดซ์)",
-        equip_2:"บ่อ/ถังล้างน้ำสะอาด และระบบเป่า/อบแห้ง",
-        equip_3:"อุปกรณ์คีบ/แขวนชิ้นงานที่ทนสารเคมี",
-        equip_4:"ถังกลิ้ง (สำหรับชิ้นงานขนาดเล็ก)",
+      equip_h: "อุปกรณ์ที่จำเป็น",
+      equip_1: "ถังชุบพลาสติก PP หรือ PE ที่ทนสารออกซิไดซ์",
+      equip_2: "บ่อล้างน้ำสะอาดและระบบเป่าลมหรือตู้อบสำหรับทำแห้ง",
+      equip_3: "อุปกรณ์คีบหรือแขวนชิ้นงานที่ทนสารเคมี",
+      equip_4: "ถังกลิ้งสำหรับชิ้นงานขนาดเล็กจำนวนมากเพื่อให้รมดำทั่วถึง",
 
-        anode_h:"ข้อเสนอแนะ & ข้อควรระวัง",
-        note_oxid:"น้ำยามีสารออกซิไดซ์ ควรใช้อุปกรณ์ที่ทนกรดและปฏิบัติตามความปลอดภัย",
-        note_overdip_h:"ข้อควรระวังการแช่นานเกินไป",
-        note_overdip_p:"หากจุ่มนานเกินไปจะเกิดฟิล์มออกไซด์เป็นเขม่าติดมือ ให้ลดเวลาในการจุ่มลง",
-        note_use_h:"การนำไปใช้แนะนำ",
-        note_use_p:"เหมาะกับงานสวยงามและกันสนิมปานกลาง เช่น ผิวปืน มีด ชิ้นส่วนเครื่องจักร โคมไฟ อุปกรณ์เฟอร์นิเจอร์ และงานพระเครื่อง",
+      anode_h: "ข้อเสนอแนะและข้อควรระวัง",
+      note_oxid: "น้ำยารมดำมีสารออกซิไดซ์และมีฤทธิ์กัดกร่อน ควรทำงานในที่ระบายอากาศดีและสวมอุปกรณ์ป้องกันส่วนบุคคล เช่น ถุงมือและแว่นตานิรภัย",
+      note_overdip_h: "ข้อควรระวังเรื่องการแช่นานเกินไป",
+      note_overdip_p: "หากแช่นานเกินไปอาจเกิดฟิล์มออกไซด์เป็นเขม่าที่หลุดติดมือได้ แสดงว่าปฏิกิริยามากเกินไป ควรลดเวลาในการจุ่มให้สั้นลง",
+      note_use_h: "การนำไปใช้งานที่แนะนำ",
+      note_use_p: "เหมาะกับงานที่ต้องการผิวสวยงามและกันสนิมปานกลาง เช่น ผิวปืน มีด ชิ้นส่วนเครื่องจักร โคมไฟ อุปกรณ์เฟอร์นิเจอร์ และงานพระเครื่อง",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -566,32 +570,36 @@
         make_s3:"Top up with water to reach 1 L total.",
         make_warn:"If longer immersion is desired, increase concentrate by ~20% to maintain darkness.",
 
-        process_h:"Part 2: Workflow",
-        proc_1:"Degrease/clean part thoroughly.",
-        proc_2:"Immerse until target shade (typically 30–120 s).",
-        proc_3:"Rinse well with water.",
-        proc_4:"Blow-dry or oven-dry.",
-        proc_5:"Buff/polish for sheen; optional clear coat for extra protection.",
+      process_h: "Part 2: Recommended Workflow",
+      proc_1: "Thoroughly clean parts to remove grease, oil, and soils. Use a degreaser or mild alkaline cleaner. Poor cleaning causes patchy or uneven blackening.",
+      proc_2: "Immerse in the cold blackening solution at room temperature for 30–120 seconds. Color usually develops within 1–2 minutes. Lift immediately once the desired tone is reached.",
+      proc_3: "Rinse thoroughly with clean water to stop residual reactions.",
+      proc_4: "Dry completely by air blow or baking.",
+      proc_5: "Buff or polish if desired, then protect with oil or lacquer to improve corrosion resistance.",
 
-        cond_h:"Part 3: Operating conditions & required equipment",
-        cond_params_h:"Operating window",
-        cond_th_param:"Parameter", cond_th_rec:"Recommended",
-        cond_temp:"Temperature", cond_temp_v:"Room temperature (≈ 20–30 °C)",
-        cond_time:"Immersion time",  cond_time_v:"30–120 s (if longer, raise concentrate by ~20%)",
-        cond_material:"Workpiece materials", cond_material_v:"Steel, copper, brass (well-cleaned surfaces required)",
+      cond_h: "Part 3: Operating Conditions and Required Equipment",
+      cond_params_h: "Operating Conditions",
+      cond_th_param: "Parameter",
+      cond_th_rec: "Recommended",
+      cond_temp: "Temperature",
+      cond_temp_v: "Room temperature (about 20–30 °C)",
+      cond_time: "Immersion time",
+      cond_time_v: "30–120 seconds. If longer times are needed or throughput is high, increase solution strength by about 20% to maintain balance.",
+      cond_material: "Workpiece materials",
+      cond_material_v: "Steel, copper, and brass. Surfaces must be well-cleaned before immersion.",
 
-        equip_h:"Required equipment",
-        equip_1:"Plastic tank or PE/PP-lined tank (oxidizer-resistant).",
-        equip_2:"Clean water rinse tank(s) and drying setup.",
-        equip_3:"Chemical-resistant racks/clamps.",
-        equip_4:"Barrel/tumbler for small parts (optional).",
+      equip_h: "Required Equipment",
+      equip_1: "PP or PE plastic tanks resistant to oxidizers",
+      equip_2: "Rinse tanks with clean water and an air-blow or drying oven",
+      equip_3: "Chemical-resistant racks, hooks, or tongs",
+      equip_4: "Tumbling barrel for small parts in bulk",
 
-        anode_h:"Recommendations & cautions",
-        note_oxid:"Oxidizing chemistry—use acid-resistant equipment and standard chemical safety.",
-        note_overdip_h:"Over-immersion caution",
-        note_overdip_p:"Excess time can form sooty films; shorten immersion to prevent rub-off.",
-        note_use_h:"Suggested applications",
-        note_use_p:"Decorative and moderate protection for firearms, knives, small machine parts, lighting and furniture hardware, and amulet work.",
+      anode_h: "Recommendations and Precautions",
+      note_oxid: "Cold blackening solutions are oxidizing and corrosive. Work in a well-ventilated area and wear PPE such as gloves and safety glasses.",
+      note_overdip_h: "Over-dipping caution",
+      note_overdip_p: "Excessive immersion can form sooty oxide films that rub off. Shorten immersion time if this occurs.",
+      note_use_h: "Suggested applications",
+      note_use_p: "Suitable for aesthetic finish with moderate rust protection: firearms finish, knives, small machine parts, lamps, furniture hardware, and amulets.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
