--- a/products/blackening/troubleshootingpatina.html
+++ b/products/blackening/troubleshootingpatina.html
@@ -202,7 +202,7 @@
 
   <!-- Hero -->
   <header class="hero">
-    <a class="back-chip" href="https://www.baumechemical.com/" data-i18n-key="back_home">← กลับเมนูหลัก</a>
+    <a class="back-chip" href="https://www.baumechemical.com/products/blackening/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">PATINA — น้ำยาทำสนิมเขียว (เร่งพาติน่า)</h1>
       <p data-i18n-key="hero_tagline">พาติน่าไม่ใช่สนิม: ทำความเข้าใจหลักการ ความแตกต่างจากสนิม วิธีใช้ทีละขั้น การซีลผิว อุปกรณ์ และความปลอดภัย</p>
@@ -312,91 +312,91 @@
         </div>
       </section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: วิธีการใช้ PATINA (ทีละขั้น)</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="proc_prep_h"><strong>1) เตรียมพื้นผิว</strong></li>
-            <li data-i18n-key="proc_prep_1">ทำความสะอาดให้ปราศจากน้ำมัน/ไขมัน/คราบสกปรก</li>
-            <li data-i18n-key="proc_prep_2">เช็ดด้วยน้ำยาล้างไขมันหรือใช้น้ำส้มสายชูช่วยเปิดผิว</li>
-            <li data-i18n-key="proc_prep_3">เช็ด/เป่าให้แห้งก่อนลงน้ำยา</li>
+<!-- Process -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: วิธีการใช้ PATINA ทีละขั้น</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="proc_prep_h">เตรียมพื้นผิว</li>
+      <li data-i18n-key="proc_prep_1">ทำความสะอาดให้ปราศจากน้ำมัน ไขมัน และคราบสกปรก</li>
+      <li data-i18n-key="proc_prep_2">เช็ดด้วยน้ำยาล้างไขมัน หรือใช้น้ำส้มสายชูช่วยเปิดผิวโลหะ</li>
+      <li data-i18n-key="proc_prep_3">เช็ดหรือเป่าให้แห้งสนิทก่อนลงน้ำยา</li>
 
-            <li data-i18n-key="proc_apply_h"><strong>2) วิธีการใช้น้ำยา</strong></li>
-            <li data-i18n-key="proc_m_spray">พ่น (Spray): ใส่ขวดสเปรย์ ฉีดให้ทั่วพื้นผิว</li>
-            <li data-i18n-key="proc_m_dip">จุ่ม (Dip): แช่ 30 วินาที – 5 นาที แล้วยกขึ้นให้แห้ง</li>
-            <li data-i18n-key="proc_m_brush">ทา (Brush): ใช้แปรง/ลูกกลิ้งทาบาง ๆ ให้สม่ำเสมอ</li>
+      <li data-i18n-key="proc_apply_h">วิธีการใช้น้ำยา</li>
+      <li data-i18n-key="proc_m_spray">พ่น: ใส่น้ำยาลงขวดสเปรย์แล้วฉีดให้ทั่วพื้นผิวเพื่อความสม่ำเสมอ</li>
+      <li data-i18n-key="proc_m_dip">จุ่ม: แช่ 30 วินาที–5 นาที แล้วยกขึ้นให้ไหลแห้งตามธรรมชาติ</li>
+      <li data-i18n-key="proc_m_brush">ทา: ใช้แปรงหรือลูกกลิ้งทาบาง ๆ ให้ทั่ว</li>
 
-            <li data-i18n-key="proc_react_h"><strong>3) รอให้เกิดปฏิกิริยา</strong></li>
-            <li data-i18n-key="proc_react_1">ปล่อยทิ้งไว้ที่อุณหภูมิห้องให้สีค่อย ๆ ก่อตัว</li>
-            <li data-i18n-key="proc_react_2">เพิ่มความชื้นในอากาศเพื่อเร่งปฏิกิริยาได้</li>
+      <li data-i18n-key="proc_react_h">รอให้เกิดปฏิกิริยา</li>
+      <li data-i18n-key="proc_react_1">ปล่อยทิ้งไว้ที่อุณหภูมิห้องให้สีค่อย ๆ ก่อตัว</li>
+      <li data-i18n-key="proc_react_2">สามารถเพิ่มความชื้นในอากาศเพื่อเร่งปฏิกิริยา</li>
 
-            <li data-i18n-key="proc_tune_h"><strong>4) ปรับแต่งสีและลวดลาย</strong></li>
-            <li data-i18n-key="proc_tune_1">ใช้ฟองน้ำ/แปรง/ผ้า ถูแต่งลวดลายหรือไล่เฉด</li>
-            <li data-i18n-key="proc_tune_2">ต้องการสีเข้มขึ้น ทาน้ำยาซ้ำแล้วเว้นให้แห้ง</li>
+      <li data-i18n-key="proc_tune_h">ปรับแต่งสีและลวดลาย</li>
+      <li data-i18n-key="proc_tune_1">ใช้ฟองน้ำ แปรง หรือผ้า ถูแต่งลวดลายหรือไล่เฉด</li>
+      <li data-i18n-key="proc_tune_2">ต้องการสีเข้มขึ้น ให้ทาน้ำยาซ้ำเป็นชั้น ๆ และเว้นให้แห้งระหว่างชั้น</li>
 
-            <li data-i18n-key="proc_seal_h"><strong>5) ซีลผิว (Sealing)</strong></li>
-            <li data-i18n-key="proc_seal_1">เมื่อได้สีตามต้องการ ให้เคลือบด้วยแล็กเกอร์ใสหรือแว็กซ์ เพื่อคงสีและป้องกันการเปลี่ยนแปลงในอนาคต</li>
-          </ul>
-        </div>
-      </section>
+      <li data-i18n-key="proc_seal_h">ซีลผิว</li>
+      <li data-i18n-key="proc_seal_1">เมื่อได้สีตามต้องการ ให้เคลือบด้วยแล็กเกอร์ใสหรือแว็กซ์ เพื่อคงสีและป้องกันการเปลี่ยนแปลงในอนาคต</li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Conditions & Equipment -->
-      <section id="conditions" class="reveal section-block" aria-labelledby="cond-h">
-        <h2 id="cond-h" class="section" data-i18n-key="cond_h">ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น</h2>
+<!-- Conditions & Equipment -->
+<section id="conditions" class="reveal section-block" aria-labelledby="cond-h">
+  <h2 id="cond-h" class="section" data-i18n-key="cond_h">ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น</h2>
 
-        <p class="lead" data-i18n-key="cond_params_h">สภาพการทำงาน</p>
-        <div class="table">
-          <table>
-            <thead>
-              <tr>
-                <th data-i18n-key="cond_th_param">พารามิเตอร์</th>
-                <th data-i18n-key="cond_th_rec">ค่าแนะนำ</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td data-i18n-key="cond_temp">อุณหภูมิ</td>
-                <td data-i18n-key="cond_temp_v">อุณหภูมิห้อง (≈ 20–30 °C)</td>
-              </tr>
-              <tr>
-                <td data-i18n-key="cond_humidity">ความชื้น</td>
-                <td data-i18n-key="cond_humidity_v">ความชื้นสูงช่วยเร่งการเกิดพาติน่า</td>
-              </tr>
-              <tr>
-                <td data-i18n-key="cond_time">เวลา</td>
-                <td data-i18n-key="cond_time_v">ตั้งแต่ไม่กี่ชั่วโมงจนถึง 1–2 วัน ขึ้นกับวิธีและสภาพแวดล้อม</td>
-              </tr>
-              <tr>
-                <td data-i18n-key="cond_substrate">วัสดุชิ้นงาน</td>
-                <td data-i18n-key="cond_substrate_v">แนะนำ: ทองแดง/ทองเหลือง (เหล็กใช้เพื่อสร้างพาติน่าสีเข้ม ไม่ใช่สนิมเขียว)</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+  <p class="lead" data-i18n-key="cond_params_h">สภาพการทำงาน</p>
+  <div class="table">
+    <table>
+      <thead>
+        <tr>
+          <th data-i18n-key="cond_th_param">พารามิเตอร์</th>
+          <th data-i18n-key="cond_th_rec">ค่าแนะนำ</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-i18n-key="cond_temp">อุณหภูมิ</td>
+          <td data-i18n-key="cond_temp_v">อุณหภูมิห้อง (ประมาณ 20–30 °C)</td>
+        </tr>
+        <tr>
+          <td data-i18n-key="cond_humidity">ความชื้น</td>
+          <td data-i18n-key="cond_humidity_v">ความชื้นสูงช่วยเร่งการเกิดพาติน่า</td>
+        </tr>
+        <tr>
+          <td data-i18n-key="cond_time">เวลา</td>
+          <td data-i18n-key="cond_time_v">ไม่กี่ชั่วโมงจนถึง 1–2 วัน ขึ้นกับวิธีและสภาพแวดล้อม</td>
+        </tr>
+        <tr>
+          <td data-i18n-key="cond_substrate">วัสดุชิ้นงาน</td>
+          <td data-i18n-key="cond_substrate_v">ทองแดง/ทองเหลือง ให้ผลดีที่สุด; เหล็กให้โทนเข้ม ไม่เกิดสนิมเขียว</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-        <p class="lead" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</p>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="equip_1">ถัง/ภาชนะ/ถาดรองที่ทนสารเคมี (PE/PP)</li>
-            <li data-i18n-key="equip_2">ขวดสเปรย์/แปรง/ลูกกลิ้ง สำหรับพ่นหรือทา</li>
-            <li data-i18n-key="equip_3">ผ้า/ฟองน้ำสำหรับปรับลวดลาย</li>
-            <li data-i18n-key="equip_4">อุปกรณ์เป่าแห้ง และพื้นที่ที่อากาศถ่ายเทดี</li>
-          </ul>
-        </div>
-      </section>
+  <p class="lead" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</p>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="equip_1">ภาชนะ/ถาดรองที่ทนสารเคมี เช่น PE หรือ PP</li>
+      <li data-i18n-key="equip_2">ขวดสเปรย์ แปรง หรือ ลูกกลิ้ง สำหรับลงน้ำยา</li>
+      <li data-i18n-key="equip_3">ผ้าหรือฟองน้ำสำหรับปรับลวดลาย</li>
+      <li data-i18n-key="equip_4">พื้นที่ทำงานที่อากาศถ่ายเทดี พร้อมอุปกรณ์เป่าหรืออบแห้ง</li>
+    </ul>
+  </div>
+</section>
 
-      <!-- Safety & notes -->
-      <section id="anode" class="reveal section-block" aria-labelledby="anode-h">
-        <h2 id="anode-h" class="section" data-i18n-key="anode_h">ความปลอดภัย & ข้อควรระวัง</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="safety_gloves">สวมถุงมือ/แว่นตา/หน้ากาก ป้องกันการสัมผัสและไอระเหย</li>
-            <li data-i18n-key="safety_vent">ทำงานในที่อากาศถ่ายเทดี</li>
-            <li data-i18n-key="safety_contact">หลีกเลี่ยงการสัมผัสผิวหนังโดยตรงและการสูดดม</li>
-          </ul>
-        </div>
-      </section>
+<!-- Safety & notes -->
+<section id="anode" class="reveal section-block" aria-labelledby="anode-h">
+  <h2 id="anode-h" class="section" data-i18n-key="anode_h">ความปลอดภัยและข้อควรระวัง</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="safety_gloves">สวมถุงมือ แว่นตานิรภัย และหน้ากาก เพื่อป้องกันการสัมผัสและไอระเหย</li>
+      <li data-i18n-key="safety_vent">ทำงานในพื้นที่ที่อากาศถ่ายเทดี</li>
+      <li data-i18n-key="safety_contact">หลีกเลี่ยงการสัมผัสผิวหนังโดยตรงและการสูดดมไอระเหยจากน้ำยา</li>
+    </ul>
+  </div>
+</section>
 
     </article>
   </main>
@@ -499,42 +499,51 @@
         use_knives:"มีด/เครื่องมือเหล็กคาร์บอน: เพิ่มความงามและช่วยลดการเกิดสนิมระหว่างใช้งาน",
         use_sculpture:"ประติมากรรมบรอนซ์/ทองแดง: ปั้นโทนสีและพื้นผิวตามต้องการ",
 
-        process_h:"ส่วนที่ 2: วิธีการใช้ PATINA (ทีละขั้น)",
-        proc_prep_h:"1) เตรียมพื้นผิว",
-        proc_prep_1:"ทำความสะอาดให้ปราศจากน้ำมัน/ไขมัน/คราบสกปรก",
-        proc_prep_2:"เช็ดด้วยน้ำยาล้างไขมันหรือใช้น้ำส้มสายชูช่วยเปิดผิว",
-        proc_prep_3:"เช็ด/เป่าให้แห้งก่อนลงน้ำยา",
-        proc_apply_h:"2) วิธีการใช้น้ำยา",
-        proc_m_spray:"พ่น (Spray): ใส่ขวดสเปรย์ ฉีดให้ทั่วพื้นผิว",
-        proc_m_dip:"จุ่ม (Dip): แช่ 30 วินาที – 5 นาที แล้วยกขึ้นให้แห้ง",
-        proc_m_brush:"ทา (Brush): ใช้แปรง/ลูกกลิ้งทาบาง ๆ ให้สม่ำเสมอ",
-        proc_react_h:"3) รอให้เกิดปฏิกิริยา",
-        proc_react_1:"ปล่อยทิ้งไว้ที่อุณหภูมิห้องให้สีค่อย ๆ ก่อตัว",
-        proc_react_2:"เพิ่มความชื้นในอากาศเพื่อเร่งปฏิกิริยาได้",
-        proc_tune_h:"4) ปรับแต่งสีและลวดลาย",
-        proc_tune_1:"ใช้ฟองน้ำ/แปรง/ผ้า ถูแต่งลวดลายหรือไล่เฉด",
-        proc_tune_2:"ต้องการสีเข้มขึ้น ทาน้ำยาซ้ำแล้วเว้นให้แห้ง",
-        proc_seal_h:"5) ซีลผิว (Sealing)",
-        proc_seal_1:"เมื่อได้สีตามต้องการ ให้เคลือบด้วยแล็กเกอร์ใสหรือแว็กซ์ เพื่อคงสีและป้องกันการเปลี่ยนแปลงในอนาคต",
+      process_h: "ส่วนที่ 2: วิธีการใช้ PATINA ทีละขั้น",
+      proc_prep_h: "เตรียมพื้นผิว",
+      proc_prep_1: "ทำความสะอาดให้ปราศจากน้ำมัน ไขมัน และคราบสกปรก",
+      proc_prep_2: "เช็ดด้วยน้ำยาล้างไขมัน หรือใช้น้ำส้มสายชูช่วยเปิดผิวโลหะ",
+      proc_prep_3: "เช็ดหรือเป่าให้แห้งสนิทก่อนลงน้ำยา",
 
-        cond_h:"ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น",
-        cond_params_h:"สภาพการทำงาน",
-        cond_th_param:"พารามิเตอร์", cond_th_rec:"ค่าแนะนำ",
-        cond_temp:"อุณหภูมิ", cond_temp_v:"อุณหภูมิห้อง (≈ 20–30 °C)",
-        cond_humidity:"ความชื้น", cond_humidity_v:"ความชื้นสูงช่วยเร่งการเกิดพาติน่า",
-        cond_time:"เวลา", cond_time_v:"ไม่กี่ชั่วโมงถึง 1–2 วัน ตามวิธี/สภาพแวดล้อม",
-        cond_substrate:"วัสดุชิ้นงาน", cond_substrate_v:"แนะนำ: ทองแดง/ทองเหลือง (เหล็กได้โทนเข้ม ไม่ใช่สนิมเขียว)",
+      proc_apply_h: "วิธีการใช้น้ำยา",
+      proc_m_spray: "พ่น: ใส่น้ำยาลงขวดสเปรย์แล้วฉีดให้ทั่วพื้นผิวเพื่อความสม่ำเสมอ",
+      proc_m_dip: "จุ่ม: แช่ 30 วินาที–5 นาที แล้วยกขึ้นให้ไหลแห้งตามธรรมชาติ",
+      proc_m_brush: "ทา: ใช้แปรงหรือลูกกลิ้งทาบาง ๆ ให้ทั่ว",
 
-        equip_h:"อุปกรณ์ที่จำเป็น",
-        equip_1:"ถัง/ภาชนะ/ถาดรองที่ทนสารเคมี (PE/PP)",
-        equip_2:"ขวดสเปรย์/แปรง/ลูกกลิ้ง สำหรับพ่นหรือทา",
-        equip_3:"ผ้า/ฟองน้ำสำหรับปรับลวดลาย",
-        equip_4:"อุปกรณ์เป่าแห้ง และพื้นที่ที่อากาศถ่ายเทดี",
+      proc_react_h: "รอให้เกิดปฏิกิริยา",
+      proc_react_1: "ปล่อยทิ้งไว้ที่อุณหภูมิห้องให้สีค่อย ๆ ก่อตัว",
+      proc_react_2: "สามารถเพิ่มความชื้นในอากาศเพื่อเร่งปฏิกิริยา",
 
-        anode_h:"ความปลอดภัย & ข้อควรระวัง",
-        safety_gloves:"สวมถุงมือ/แว่นตา/หน้ากาก ป้องกันการสัมผัสและไอระเหย",
-        safety_vent:"ทำงานในที่อากาศถ่ายเทดี",
-        safety_contact:"หลีกเลี่ยงการสัมผัสผิวหนังโดยตรงและการสูดดม",
+      proc_tune_h: "ปรับแต่งสีและลวดลาย",
+      proc_tune_1: "ใช้ฟองน้ำ แปรง หรือผ้า ถูแต่งลวดลายหรือไล่เฉด",
+      proc_tune_2: "ต้องการสีเข้มขึ้น ให้ทาน้ำยาซ้ำเป็นชั้น ๆ และเว้นให้แห้งระหว่างชั้น",
+
+      proc_seal_h: "ซีลผิว",
+      proc_seal_1: "เมื่อได้สีตามต้องการ ให้เคลือบด้วยแล็กเกอร์ใสหรือแว็กซ์ เพื่อคงสีและป้องกันการเปลี่ยนแปลงในอนาคต",
+
+      cond_h: "ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น",
+      cond_params_h: "สภาพการทำงาน",
+      cond_th_param: "พารามิเตอร์",
+      cond_th_rec: "ค่าแนะนำ",
+      cond_temp: "อุณหภูมิ",
+      cond_temp_v: "อุณหภูมิห้อง (ประมาณ 20–30 °C)",
+      cond_humidity: "ความชื้น",
+      cond_humidity_v: "ความชื้นสูงช่วยเร่งการเกิดพาติน่า",
+      cond_time: "เวลา",
+      cond_time_v: "ไม่กี่ชั่วโมงจนถึง 1–2 วัน ขึ้นกับวิธีและสภาพแวดล้อม",
+      cond_substrate: "วัสดุชิ้นงาน",
+      cond_substrate_v: "ทองแดง/ทองเหลือง ให้ผลดีที่สุด; เหล็กให้โทนเข้ม ไม่เกิดสนิมเขียว",
+
+      equip_h: "อุปกรณ์ที่จำเป็น",
+      equip_1: "ภาชนะ/ถาดรองที่ทนสารเคมี เช่น PE หรือ PP",
+      equip_2: "ขวดสเปรย์ แปรง หรือ ลูกกลิ้ง สำหรับลงน้ำยา",
+      equip_3: "ผ้าหรือฟองน้ำสำหรับปรับลวดลาย",
+      equip_4: "พื้นที่ทำงานที่อากาศถ่ายเทดี พร้อมอุปกรณ์เป่าหรืออบแห้ง",
+
+      anode_h: "ความปลอดภัยและข้อควรระวัง",
+      safety_gloves: "สวมถุงมือ แว่นตานิรภัย และหน้ากาก เพื่อป้องกันการสัมผัสและไอระเหย",
+      safety_vent: "ทำงานในพื้นที่ที่อากาศถ่ายเทดี",
+      safety_contact: "หลีกเลี่ยงการสัมผัสผิวหนังโดยตรงและการสูดดมไอระเหยจากน้ำยา",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -585,42 +594,51 @@
         use_knives:"Carbon-steel knives/tools: aesthetics while helping reduce everyday rusting.",
         use_sculpture:"Bronze/copper sculpture: craft the desired color and texture.",
 
-        process_h:"Part 2: How to use PATINA (step-by-step)",
-        proc_prep_h:"1) Surface preparation",
-        proc_prep_1:"Degrease thoroughly—no oils or residues.",
-        proc_prep_2:"Wipe with degreaser or vinegar to open the surface.",
-        proc_prep_3:"Dry completely before applying.",
-        proc_apply_h:"2) Application methods",
-        proc_m_spray:"Spray: load into a bottle and mist evenly.",
-        proc_m_dip:"Dip: immerse 30 s – 5 min, then lift and let dry.",
-        proc_m_brush:"Brush: apply a thin, even coat with brush/roller.",
-        proc_react_h:"3) Reaction time",
-        proc_react_1:"Leave at room temperature to let color develop.",
-        proc_react_2:"Raise ambient humidity to accelerate the reaction.",
-        proc_tune_h:"4) Tune color & pattern",
-        proc_tune_1:"Use sponge/brush/cloth to sculpt patterns or gradients.",
-        proc_tune_2:"For deeper tones, re-apply and allow to dry between passes.",
-        proc_seal_h:"5) Seal the finish",
-        proc_seal_1:"Once the look is achieved, seal with clear lacquer or wax to stabilize color over time.",
+      process_h: "Part 2: Step-by-step PATINA application",
+      proc_prep_h: "Surface preparation",
+      proc_prep_1: "Remove grease, oil, and soils thoroughly.",
+      proc_prep_2: "Wipe with a degreaser or use vinegar to activate the metal surface.",
+      proc_prep_3: "Wipe or air-blow completely dry before applying solution.",
 
-        cond_h:"Part 3: Operating conditions & required equipment",
-        cond_params_h:"Operating conditions",
-        cond_th_param:"Parameter", cond_th_rec:"Recommended",
-        cond_temp:"Temperature", cond_temp_v:"Room temperature (≈ 20–30 °C)",
-        cond_humidity:"Humidity", cond_humidity_v:"Higher humidity accelerates patina formation.",
-        cond_time:"Time", cond_time_v:"From hours up to 1–2 days depending on method/environment.",
-        cond_substrate:"Substrates", cond_substrate_v:"Recommended: copper/brass (steel yields dark tones, not verdigris).",
+      proc_apply_h: "How to apply",
+      proc_m_spray: "Spray: Fill a spray bottle and mist the surface evenly.",
+      proc_m_dip: "Dip: Immerse for 30 seconds–5 minutes, then lift and let drain-dry.",
+      proc_m_brush: "Brush: Apply a thin, even coat with a brush or roller.",
 
-        equip_h:"Required equipment",
-        equip_1:"Chemical-resistant container/tray (PE/PP).",
-        equip_2:"Spray bottle / brush / roller for application.",
-        equip_3:"Cloth/sponge for pattern tuning.",
-        equip_4:"Drying setup and a well-ventilated workspace.",
+      proc_react_h: "Let it react",
+      proc_react_1: "Leave at room temperature for the color to develop gradually.",
+      proc_react_2: "Higher humidity can be used to accelerate the reaction.",
 
-        anode_h:"Safety & cautions",
-        safety_gloves:"Wear gloves/goggles/mask to avoid contact and fumes.",
-        safety_vent:"Work in a well-ventilated area.",
-        safety_contact:"Avoid direct skin contact and inhalation.",
+      proc_tune_h: "Tune color and pattern",
+      proc_tune_1: "Use a sponge, brush, or cloth to texture or gradient the tone.",
+      proc_tune_2: "For deeper color, re-apply in layers with drying between coats.",
+
+      proc_seal_h: "Seal the finish",
+      proc_seal_1: "Once the color is achieved, seal with clear lacquer or wax to preserve and stabilize the patina.",
+
+      cond_h: "Part 3: Conditions and required equipment",
+      cond_params_h: "Operating conditions",
+      cond_th_param: "Parameter",
+      cond_th_rec: "Recommended",
+      cond_temp: "Temperature",
+      cond_temp_v: "Room temperature (about 20–30 °C)",
+      cond_humidity: "Humidity",
+      cond_humidity_v: "Higher humidity accelerates patination.",
+      cond_time: "Time",
+      cond_time_v: "From a few hours up to 1–2 days, depending on method and environment.",
+      cond_substrate: "Substrates",
+      cond_substrate_v: "Copper/brass work best; steel yields dark tones (not green verdigris).",
+
+      equip_h: "Required equipment",
+      equip_1: "Chemical-resistant trays/containers (PE or PP).",
+      equip_2: "Spray bottle, brush, or roller for application.",
+      equip_3: "Cloth or sponge for patterning.",
+      equip_4: "Well-ventilated workspace with air blowers or drying oven.",
+
+      anode_h: "Safety and precautions",
+      safety_gloves: "Wear gloves, safety glasses, and a mask to avoid contact and fumes.",
+      safety_vent: "Work in a well-ventilated area.",
+      safety_contact: "Avoid direct skin contact and inhalation of vapors.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
