--- a/products/passivation/index.html
+++ b/products/passivation/index.html
@@ -253,7 +253,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr³⁺</span></div>
           <h3 data-i18n-key="c3_blue_t">Blue (White) Chromate 3</h3>
-          <p data-i18n-key="c3_blue_d">ใช้ได้กับซิงค์กรด/ด่าง และสูตรไม่ใช้ไซยาไนด์ ให้ฟ้าอมขาว ทน Salt Spray &gt;96 ชม. (ที่ 5% v/v) ไม่มีโครเมียมหกวาเลนต์ (Cr6) เป็น Cr3 จึงเป็นมิตรต่อสิ่งแวดล้อมและดูแลง่าย.</p>
+          <p data-i18n-key="c3_blue_d">สร้างฟิล์มบางๆ สีฟ้าอมขาวและเพิ่มความทนทานต่อการกัดกร่อน สารนี้ใช้ โครเมียม 3 (Cr³⁺) ซึ่งปลอดภัยและเป็นมิตรต่อสิ่งแวดล้อม ทำให้การบำบัดน้ำเสียง่ายขึ้น และสามารถทนการทดสอบ Salt Spray ได้นานกว่า 96 ชั่วโมง</p>
           <a class="more" href="blue-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -264,7 +264,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr³⁺</span></div>
           <h3 data-i18n-key="c3_black_t">Black Chromate 3</h3>
-          <p data-i18n-key="c3_black_d">สำหรับซิงค์กรดและด่าง ฟิล์มดำสนิท เงาสวย ยิ่งทนเมื่อลงซีลแลคซ์ Barrel ~48–72 ชม., Rack ~72–96 ชม. เฉดเข้ม–อ่อนปรับตามเวลาแช่.</p>
+          <p data-i18n-key="c3_black_d">สร้างฟิล์มสีดำเงาสนิทที่สวยงาม ซึ่งความเข้มของสีจะปรับได้ตามระยะเวลาที่แช่ชิ้นงานในน้ำยา โดยสามารถทนการทดสอบ Salt Spray ได้นาน 96 ชั่วโมง และจะทนทานยิ่งขึ้นเมื่อเคลือบด้วยน้ำยาซีลอีกชั้น</p>
           <a class="more" href="troubleshootingtrivalentchromeblack.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -275,7 +275,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr³⁺</span></div>
           <h3 data-i18n-key="c3_iri_t">Iridescent Chromate 3</h3>
-          <p data-i18n-key="c3_iri_d">โทนรุ้ง ใช้ง่าย ไม่มี Cr6 บำบัดน้ำทิ้งได้ สีออกฟ้า–เขียว/เขียว/ม่วงฟ้าปนแดงตามสภาพและเวลาแช่ ทน White Rust ~144–196 ชม.</p>
+          <p data-i18n-key="c3_iri_d">โทนรุ้ง สารนี้ใช้ โครเมียม 3 (Cr³⁺) ซึ่งปลอดภัยและเป็นมิตรต่อสิ่งแวดล้อม ทำให้การบำบัดน้ำเสียง่ายขึ้น สีออกฟ้า–เขียว/เขียว/ม่วงฟ้าปนแดงตามสภาพและเวลาแช่ และยังทนทานต่อการเกิด White Rust (สนิมขาว) ได้นานถึง 144–196 ชั่วโมง</p>
           <a class="more" href="iridescent-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -286,7 +286,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr³⁺</span></div>
           <h3 data-i18n-key="c3_yellow_t">Yellow Chromate 3</h3>
-          <p data-i18n-key="c3_yellow_d">โทนเหลือง/รุ้ง ใกล้เคียง Cr6 Yellow แต่เป็น Cr3 ที่เป็นมิตรต่อสิ่งแวดล้อม ทน ~72–100 ชม. อบ 120°C ช่วยเพิ่มความทน.</p>
+          <p data-i18n-key="c3_yellow_d">สร้างฟิล์มสี เหลือง-รุ้ง แต่ใช้ โครเมียม 3 (Cr³⁺) ที่ปลอดภัยกว่า สารนี้เป็นมิตรต่อสิ่งแวดล้อมและสามารถทนต่อการกัดกร่อนได้นาน 72–100 ชั่วโมง โดยสามารถเพิ่มความทนทานได้อีกด้วยการอบที่อุณหภูมิ 120 °C</p>
           <a class="more" href="yellow-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -297,7 +297,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_blue_t">Blue (White) Chromate 6</h3>
-          <p data-i18n-key="c6_blue_d">ชนิด Cr6 ปรับบำรุงอ่างง่าย pH เสถียร ให้ฟ้าอมขาว เพิ่มความฟ้าได้ด้วยสีย้อม ทน &gt;48 ชม.</p>
+          <p data-i18n-key="c6_blue_d">ชนิดโครเมียม 6 (Cr⁶⁺) ซึ่งเป็นสารเคมีดั้งเดิมที่มีความเสถียรสูง ทำให้การปรับปรุงบ่อชุบง่ายและค่า pH คงที่ นอกจากนี้ยังสามารถเพิ่มความเข้มของสีฟ้าได้ด้วยการเติมสีย้อมอีกด้วย ชิ้นงานทนทานต่อการกัดกร่อนได้นานกว่า 48 ชั่วโมง</p>
           <a class="more" href="troubleshootinghexavalentchromeblue.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -308,7 +308,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_black_t">Black Chromate 6</h3>
-          <p data-i18n-key="c6_black_d">ผิวดำเงา ใช้ได้ทั้งแขวน/กลิ้ง ช่วงทำงานกว้าง ไตเตรตคุมง่าย ทน White Rust ~240–288 ชม.</p>
+          <p data-i18n-key="c6_black_d">ห้ผิวสีดำเงาสวยงามและมีความทนทานสูงมาก คุณสมบัติเด่นคือสามารถทนการกัดกร่อนจาก White Rust (สนิมขาว) ได้นานถึง 240–288 ชั่วโมง</p>
           <a class="more" href="troubleshootinghexavalentchromeblack.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -319,7 +319,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_yellow_t">Yellow Chromate 6</h3>
-          <p data-i18n-key="c6_yellow_d">ใช้ปริมาณน้อย ดูแลง่าย ปรับความเข้มด้วยน้ำ/สีย้อม โทนเหลืองรุ้ง ทน ≥72 ชม.</p>
+          <p data-i18n-key="c6_yellow_d">สร้างฟิล์มที่มีสี เหลือง-รุ้ง สวยงาม ใช้ปริมาณน้อย, ดูแลรักษาง่าย, และสามารถปรับความเข้มของสีได้ด้วยการเติมน้ำหรือสีย้อม นอกจากนี้ยังช่วยให้ชิ้นงานทนทานต่อการกัดกร่อนได้นาน 72 ชั่วโมง</p>
           <a class="more" href="yellow-6-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
@@ -330,7 +330,7 @@
         <div class="body">
           <div class="badge-row"><span class="badge">Passivation</span><span class="badge">Cr⁶⁺</span></div>
           <h3 data-i18n-key="c6_olive_t">Olive Drab Chromate 6</h3>
-          <p data-i18n-key="c6_olive_d">โทนเขียว Olive Drab อมเข้ม ทนกัดกร่อนสูง เป็นฐานก่อนพ่นสีได้ดี ทน ~240–288 ชม.</p>
+          <p data-i18n-key="c6_olive_d">สร้างฟิล์มสีเขียวทหาร (Olive Drab) ที่ดูแข็งแรงและมีความทนทานสูง ความทนทานต่อการกัดกร่อน: สารเคลือบนี้ช่วยให้ชิ้นงานสามารถทนทานต่อการกัดกร่อนได้นานถึง 240–288 ชั่วโมง</p>
           <a class="more" href="olive-6-passivation-on-zinc.html" data-i18n-key="view_details">ดูรายละเอียด →</a>
         </div>
       </article>
