--- a/products/platingcoating/brassplating/troubleshootingbrass/index.html
+++ b/products/platingcoating/brassplating/troubleshootingbrass/index.html
@@ -368,59 +368,78 @@
             </tbody>
           </table>
         </div>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="mix_s1">เริ่มด้วยน้ำ ~2/3 บ่อ กวนให้ Meta Salt ละลายใส → เติม NH₄Cl → ปรับปริมาตรและอุณหภูมิ</li>
-            <li data-i18n-key="mix_s2">ปรับ pH ด้วย NaOH ตามช่วงแนะนำ <strong>(ห้ามเติมกรดลงในบ่อไซยาไนด์)</strong></li>
-          </ul>
-        </div>
 
-        <p class="lead" data-i18n-key="equip_h">อุปกรณ์ที่แนะนำ</p>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="equip_1">ถังเหล็กเชื่อม/ถังบุ PVC/ยาง ทนด่างและไซยาไนด์</li>
-            <li data-i18n-key="equip_2">ระบบให้ความร้อนสำหรับงานอุ่น พร้อมดูดไอ/ระบายอากาศ</li>
-            <li data-i18n-key="equip_3">คานแอโนด/แคโทดแน่นหนา ถุงผ้าทนด่างสำหรับแอโนด</li>
-          </ul>
-        </div>
+<!-- Cyanide Brass — Mix, Equipment, Maintenance, Flow -->
+<section id="cn-brass" class="reveal section-block" aria-labelledby="cnbr-h">
+  <h2 id="cnbr-h" class="section" data-i18n-key="cnbr_h">การชุบทองเหลืองไซยาไนด์</h2>
 
-        <p class="lead" data-i18n-key="maint_h">บำรุงรักษา & ควบคุม</p>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="maint_1">วิเคราะห์สัปดาห์ละ 1 ครั้ง: Cu 8.5–9.5 g/L, Zn 7.5–8.5 g/L, Free NaCN 14–16 g/L</li>
-            <li data-i18n-key="maint_2">ช่วงเริ่มบ่อ เติม NH₄Cl 2–3 g/L รายวันเพื่อรักษาสมดุลแอมโมเนีย</li>
-            <li data-i18n-key="maint_3">เพิ่ม °Bé ทีละ 1 คะแนน → เติม Meta Salt ~15 g/L (ละลายน้ำก่อนเติม)</li>
-            <li data-i18n-key="maint_4">บันทึกอุณหภูมิ/กระแส/การเติม ทุกกะ</li>
-          </ul>
-        </div>
+  <h3 class="section" data-i18n-key="cnbr_comp_h">องค์ประกอบของน้ำยาชุบ</h3>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="cnbr_comp_1">ไซยาไนด์: เป็นสารหลักที่ช่วยให้ทองแดงและสังกะสีอยู่ในรูปเชิงซ้อน ละลายได้ดี และตกตะกอนร่วมกันบนผิวชิ้นงานอย่างสม่ำเสมอ</li>
+      <li data-i18n-key="cnbr_comp_2">ทองแดงและสังกะสี: เป็นโลหะต้นทางที่ใช้สร้างชั้นทองเหลือง โดยอัตราส่วนของทั้งสองมีผลต่อสีและสมบัติเชิงกลของผิวเคลือบ</li>
+      <li data-i18n-key="cnbr_comp_3">แอมโมเนีย: ช่วยปรับสมดุลและเสถียรภาพของอ่าง ทำให้สีของทองเหลืองสม่ำเสมอ ลดการเกิดคราบและความต่างเฉดสี</li>
+    </ul>
+  </div>
 
-        <p class="lead" data-i18n-key="flow_h">ลำดับกระบวนการแนะนำ</p>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="flow_1">ล้างไขมัน B1 40–60 g/L @ 80 °C, 2–5 นาที → ล้างน้ำ</li>
-            <li data-i18n-key="flow_2">ดีแกรสไฟฟ้า E-60 80 g/L @ 70 °C, 2–3 นาที, 50–100 ASF → ล้างน้ำ</li>
-            <li data-i18n-key="flow_3">ล้างกรด 10–15% v/v @ RT, ~30 วินาที → ล้างน้ำ</li>
-            <li data-i18n-key="flow_4">ชุบนิเกิลรองพื้น (ตามวัสดุ) → ล้างน้ำ</li>
-            <li data-i18n-key="flow_5">ชุบทองเหลือง ≥0.6–1.0 µm → ล้างน้ำ</li>
-            <li data-i18n-key="flow_6">จุ่ม H₂SO₄ 2–3% เพื่อล้างคราบไซยาไนด์บนผิว (ทำในถังแยกมีดูดไอ) → ล้างน้ำ</li>
-            <li data-i18n-key="flow_7">จุ่มกันหมองทองแดง-ทองเหลือง → เป่าลม/อบแห้ง</li>
-          </ul>
-        </div>
-      </section>
+  <h3 class="section" data-i18n-key="cnbr_make_h">การเตรียมน้ำยาและอุปกรณ์</h3>
 
-      <!-- Safety -->
-      <section id="safety" class="reveal section-block" aria-labelledby="safety-h">
-        <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัย & สิ่งแวดล้อม (ไซยาไนด์)</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="safety_1"><strong>ห้าม</strong> เติมกรดลงในบ่อ/ของเสียที่มีไซยาไนด์ — เสี่ยงเกิดก๊าซ HCN</li>
-            <li data-i18n-key="safety_2">สวม PPE (ถุงมือกันสารเคมี แว่นตา หน้ากากที่เหมาะสม) และใช้ระบบดูดไอ</li>
-            <li data-i18n-key="safety_3">ขั้นตอนจุ่มกรดหลังชุบให้ทำในถังแยก พร้อมแนวปฏิบัติที่ปลอดภัย</li>
-            <li data-i18n-key="safety_4">บำบัดน้ำเสียไซยาไนด์ตามกฎหมาย (ออกซิไดซ์เป็นไซยาเนตในด่าง ฯลฯ) และเฝ้าระวัง pH</li>
-            <li data-i18n-key="safety_5"><em>ฉุกเฉิน:</em> กระเด็นเข้าตา ให้ล้างน้ำสะอาดต่อเนื่อง ≥15 นาที และพบแพทย์</li>
-          </ul>
-        </div>
-      </section>
+  <h4 class="section" data-i18n-key="cnbr_make_new_h">การเตรียมน้ำยาใหม่</h4>
+  <div class="content">
+    <ol>
+      <li data-i18n-key="cnbr_make_1">ทำความสะอาดและเติมน้ำ: ล้างบ่อชุบให้สะอาด จากนั้นเติมน้ำกลั่นประมาณ 2/3 ของปริมาตรที่ต้องการ แล้วเริ่มกวน</li>
+      <li data-i18n-key="cnbr_make_2">ละลายสารเคมี: ค่อยๆ เติม Meta Salt ลงในบ่อ กวนจนละลายใส แล้วเติมแอมโมเนียมคลอไรด์ (NH4Cl) เพื่อรักษาสมดุลของแอมโมเนีย</li>
+      <li data-i18n-key="cnbr_make_3">ปรับปริมาตรและ pH: เติมน้ำจนถึงปริมาตรที่กำหนด แล้วปรับค่า pH ด้วยโซเดียมไฮดรอกไซด์ (NaOH) ให้อยู่ในช่วงที่แนะนำ ห้ามเติมกรดลงในบ่อที่มีไซยาไนด์โดยเด็ดขาด</li>
+    </ol>
+  </div>
+
+  <h4 class="section" data-i18n-key="cnbr_equip_h">อุปกรณ์ที่ต้องใช้</h4>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="cnbr_equip_1">ถังชุบ: ใช้ถังเหล็กเชื่อม หรือถังที่บุด้วย PVC หรือยาง ซึ่งทนด่างและทนไซยาไนด์</li>
+      <li data-i18n-key="cnbr_equip_2">ระบบให้ความร้อนและระบายอากาศ: มีฮีตเตอร์สำหรับงานอุ่น พร้อมระบบดูดไอและระบายอากาศที่มีประสิทธิภาพ</li>
+      <li data-i18n-key="cnbr_equip_3">แอโนดและอุปกรณ์ยึดจับ: คานแอโนด/แคโทดแน่นหนา และใช้ถุงผ้าทนด่างสำหรับบรรจุแอโนดทองเหลืองหรือทองแดง/สังกะสี</li>
+    </ul>
+  </div>
+
+  <h3 class="section" data-i18n-key="cnbr_maint_h">การควบคุมและบำรุงรักษา</h3>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="cnbr_maint_1">วิเคราะห์น้ำยาสัปดาห์ละ 1 ครั้ง: ทองแดง 8.5–9.5 g/L, สังกะสี 7.5–8.5 g/L, ไซยาไนด์อิสระ 14–16 g/L</li>
+      <li data-i18n-key="cnbr_maint_2">ช่วงเริ่มบ่อ: เติมแอมโมเนียมคลอไรด์ 2–3 g/L รายวัน เพื่อรักษาสมดุลของแอมโมเนียและเสถียรภาพของสี</li>
+      <li data-i18n-key="cnbr_maint_3">การปรับความเข้มข้นรวม: ต้องการเพิ่มค่าองศาเบาเม่ 1 คะแนน ให้เติม Meta Salt ประมาณ 15 g/L โดยละลายในน้ำก่อนเติมลงบ่อ</li>
+      <li data-i18n-key="cnbr_maint_4">บันทึกการเดินบ่อ: บันทึกอุณหภูมิ กระแสไฟฟ้า และปริมาณการเติมสารเคมีทุกกะ เพื่อใช้ติดตามแนวโน้มและแก้ปัญหา</li>
+    </ul>
+  </div>
+
+  <h3 class="section" data-i18n-key="cnbr_flow_h">ลำดับกระบวนการชุบที่แนะนำ</h3>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="cnbr_flow_1">ล้างไขมันด่าง B1 40–60 g/L ที่ 80 °C เวลา 2–5 นาที แล้วล้างน้ำ</li>
+      <li data-i18n-key="cnbr_flow_2">ดีแกรสไฟฟ้า E-60 80 g/L ที่ 70 °C เวลา 2–3 นาที ที่ 50–100 ASF แล้วล้างน้ำ</li>
+      <li data-i18n-key="cnbr_flow_3">ล้างกรด 10–15% v/v อุณหภูมิห้อง ประมาณ 30 วินาที แล้วล้างน้ำ</li>
+      <li data-i18n-key="cnbr_flow_4">ชุบนิเกิลรองพื้นตามชนิดวัสดุ แล้วล้างน้ำ</li>
+      <li data-i18n-key="cnbr_flow_5">ชุบทองเหลืองให้ความหนาอย่างน้อย 0.6–1.0 µm แล้วล้างน้ำ</li>
+      <li data-i18n-key="cnbr_flow_6">จุ่มกรดซัลฟูริก 2–3% เพื่อล้างคราบไซยาไนด์บนผิว ทำในถังแยกที่มีระบบดูดไอ แล้วล้างน้ำ</li>
+      <li data-i18n-key="cnbr_flow_7">จุ่มน้ำยากันหมองสำหรับทองแดงและทองเหลือง แล้วเป่าลมหรืออบแห้ง</li>
+    </ul>
+  </div>
+</section>
+
+<!-- Safety (Cyanide) -->
+<section id="safety" class="reveal section-block" aria-labelledby="safety-h">
+  <h2 id="safety-h" class="section" data-i18n-key="safety_h">ความปลอดภัยและสิ่งแวดล้อม (ไซยาไนด์)</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="safety_1">ห้ามเติมกรดลงในบ่อหรือน้ำเสียที่มีไซยาไนด์ เนื่องจากเสี่ยงเกิดก๊าซไฮโดรเจนไซยาไนด์ ที่เป็นพิษร้ายแรง</li>
+      <li data-i18n-key="safety_2">สวมอุปกรณ์ป้องกันส่วนบุคคลที่เหมาะสม ได้แก่ ถุงมือกันสารเคมี แว่นตานิรภัย และหน้ากาก พร้อมใช้งานระบบดูดไอ</li>
+      <li data-i18n-key="safety_3">ขั้นตอนจุ่มกรดหลังชุบให้ทำในถังแยก และปฏิบัติตามแนวปฏิบัติความปลอดภัยอย่างเคร่งครัด</li>
+      <li data-i18n-key="safety_4">บำบัดน้ำเสียไซยาไนด์ตามกฎหมาย โดยออกซิไดซ์ให้เป็นไซยาเนตภายใต้สภาวะด่าง และเฝ้าระวัง pH อย่างต่อเนื่อง</li>
+      <li data-i18n-key="safety_5">กรณีฉุกเฉินสารเคมีกระเด็นเข้าตา ให้ล้างด้วยน้ำสะอาดต่อเนื่องอย่างน้อย 15 นาที และรีบพบแพทย์</li>
+    </ul>
+  </div>
+</section>
+
 
     </article>
   </main>
@@ -594,12 +613,45 @@
         flow_6:"จุ่ม H₂SO₄ 2–3% เพื่อล้างคราบไซยาไนด์บนผิว (ทำในถังแยกมีดูดไอ) → ล้างน้ำ",
         flow_7:"จุ่มกันหมองทองแดง-ทองเหลือง → เป่าลม/อบแห้ง",
 
-        safety_h:"ความปลอดภัย & สิ่งแวดล้อม (ไซยาไนด์)",
-        safety_1:"ห้าม เติมกรดลงในบ่อ/ของเสียที่มีไซยาไนด์ — เสี่ยงเกิดก๊าซ HCN",
-        safety_2:"สวม PPE (ถุงมือกันสารเคมี แว่นตา หน้ากากที่เหมาะสม) และใช้ระบบดูดไอ",
-        safety_3:"ขั้นตอนจุ่มกรดหลังชุบให้ทำในถังแยก พร้อมแนวปฏิบัติที่ปลอดภัย",
-        safety_4:"บำบัดน้ำเสียไซยาไนด์ตามกฎหมาย (ออกซิไดซ์เป็นไซยาเนตในด่าง ฯลฯ) และเฝ้าระวัง pH",
-        safety_5:"ฉุกเฉิน: กระเด็นเข้าตา ให้ล้างน้ำสะอาดต่อเนื่อง ≥15 นาที และพบแพทย์",
+      cnbr_h: "การชุบทองเหลืองไซยาไนด์",
+
+      cnbr_comp_h: "องค์ประกอบของน้ำยาชุบ",
+      cnbr_comp_1: "ไซยาไนด์: เป็นสารหลักที่ช่วยให้ทองแดงและสังกะสีอยู่ในรูปเชิงซ้อน ละลายได้ดี และตกตะกอนร่วมกันบนผิวชิ้นงานอย่างสม่ำเสมอ",
+      cnbr_comp_2: "ทองแดงและสังกะสี: เป็นโลหะต้นทางที่ใช้สร้างชั้นทองเหลือง โดยอัตราส่วนของทั้งสองมีผลต่อสีและสมบัติเชิงกลของผิวเคลือบ",
+      cnbr_comp_3: "แอมโมเนีย: ช่วยปรับสมดุลและเสถียรภาพของอ่าง ทำให้สีของทองเหลืองสม่ำเสมอ ลดการเกิดคราบและความต่างเฉดสี",
+
+      cnbr_make_h: "การเตรียมน้ำยาและอุปกรณ์",
+      cnbr_make_new_h: "การเตรียมน้ำยาใหม่",
+      cnbr_make_1: "ทำความสะอาดและเติมน้ำ: ล้างบ่อชุบให้สะอาด จากนั้นเติมน้ำกลั่นประมาณ 2/3 ของปริมาตรที่ต้องการ แล้วเริ่มกวน",
+      cnbr_make_2: "ละลายสารเคมี: ค่อยๆ เติม Meta Salt ลงในบ่อ กวนจนละลายใส แล้วเติมแอมโมเนียมคลอไรด์ (NH4Cl) เพื่อรักษาสมดุลของแอมโมเนีย",
+      cnbr_make_3: "ปรับปริมาตรและ pH: เติมน้ำจนถึงปริมาตรที่กำหนด แล้วปรับค่า pH ด้วยโซเดียมไฮดรอกไซด์ (NaOH) ให้อยู่ในช่วงที่แนะนำ ห้ามเติมกรดลงในบ่อที่มีไซยาไนด์โดยเด็ดขาด",
+
+      cnbr_equip_h: "อุปกรณ์ที่ต้องใช้",
+      cnbr_equip_1: "ถังชุบ: ใช้ถังเหล็กเชื่อม หรือถังที่บุด้วย PVC หรือยาง ซึ่งทนด่างและทนไซยาไนด์",
+      cnbr_equip_2: "ระบบให้ความร้อนและระบายอากาศ: มีฮีตเตอร์สำหรับงานอุ่น พร้อมระบบดูดไอและระบายอากาศที่มีประสิทธิภาพ",
+      cnbr_equip_3: "แอโนดและอุปกรณ์ยึดจับ: คานแอโนด/แคโทดแน่นหนา และใช้ถุงผ้าทนด่างสำหรับบรรจุแอโนดทองเหลืองหรือทองแดง/สังกะสี",
+
+      cnbr_maint_h: "การควบคุมและบำรุงรักษา",
+      cnbr_maint_1: "วิเคราะห์น้ำยาสัปดาห์ละ 1 ครั้ง: ทองแดง 8.5–9.5 g/L, สังกะสี 7.5–8.5 g/L, ไซยาไนด์อิสระ 14–16 g/L",
+      cnbr_maint_2: "ช่วงเริ่มบ่อ: เติมแอมโมเนียมคลอไรด์ 2–3 g/L รายวัน เพื่อรักษาสมดุลของแอมโมเนียและเสถียรภาพของสี",
+      cnbr_maint_3: "การปรับความเข้มข้นรวม: ต้องการเพิ่มค่าองศาเบาเม่ 1 คะแนน ให้เติม Meta Salt ประมาณ 15 g/L โดยละลายในน้ำก่อนเติมลงบ่อ",
+      cnbr_maint_4: "บันทึกการเดินบ่อ: บันทึกอุณหภูมิ กระแสไฟฟ้า และปริมาณการเติมสารเคมีทุกกะ เพื่อใช้ติดตามแนวโน้มและแก้ปัญหา",
+
+      cnbr_flow_h: "ลำดับกระบวนการชุบที่แนะนำ",
+      cnbr_flow_1: "ล้างไขมันด่าง B1 40–60 g/L ที่ 80 °C เวลา 2–5 นาที แล้วล้างน้ำ",
+      cnbr_flow_2: "ดีแกรสไฟฟ้า E-60 80 g/L ที่ 70 °C เวลา 2–3 นาที ที่ 50–100 ASF แล้วล้างน้ำ",
+      cnbr_flow_3: "ล้างกรด 10–15% v/v อุณหภูมิห้อง ประมาณ 30 วินาที แล้วล้างน้ำ",
+      cnbr_flow_4: "ชุบนิเกิลรองพื้นตามชนิดวัสดุ แล้วล้างน้ำ",
+      cnbr_flow_5: "ชุบทองเหลืองให้ความหนาอย่างน้อย 0.6–1.0 µm แล้วล้างน้ำ",
+      cnbr_flow_6: "จุ่มกรดซัลฟูริก 2–3% เพื่อล้างคราบไซยาไนด์บนผิว ทำในถังแยกที่มีระบบดูดไอ แล้วล้างน้ำ",
+      cnbr_flow_7: "จุ่มน้ำยากันหมองสำหรับทองแดงและทองเหลือง แล้วเป่าลมหรืออบแห้ง",
+
+      safety_h: "ความปลอดภัยและสิ่งแวดล้อม (ไซยาไนด์)",
+      safety_1: "ห้ามเติมกรดลงในบ่อหรือน้ำเสียที่มีไซยาไนด์ เนื่องจากเสี่ยงเกิดก๊าซไฮโดรเจนไซยาไนด์ ที่เป็นพิษร้ายแรง",
+      safety_2: "สวมอุปกรณ์ป้องกันส่วนบุคคลที่เหมาะสม ได้แก่ ถุงมือกันสารเคมี แว่นตานิรภัย และหน้ากาก พร้อมใช้งานระบบดูดไอ",
+      safety_3: "ขั้นตอนจุ่มกรดหลังชุบให้ทำในถังแยก และปฏิบัติตามแนวปฏิบัติความปลอดภัยอย่างเคร่งครัด",
+      safety_4: "บำบัดน้ำเสียไซยาไนด์ตามกฎหมาย โดยออกซิไดซ์ให้เป็นไซยาเนตภายใต้สภาวะด่าง และเฝ้าระวัง pH อย่างต่อเนื่อง",
+      safety_5: "กรณีฉุกเฉินสารเคมีกระเด็นเข้าตา ให้ล้างด้วยน้ำสะอาดต่อเนื่องอย่างน้อย 15 นาที และรีบพบแพทย์",
 
         addr_l1:"📍 31 ซอย เพชรเกษม 48 แยก 24 แขวง บางแวก",
         addr_l2:"📍 เขต ภาษีเจริญ กรุงเทพมหานคร 10160",
@@ -730,12 +782,45 @@
         flow_6:"H₂SO₄ 2–3% dip to remove cyanide residue (separate tank, fume control) → rinse.",
         flow_7:"Anti-tarnish for Cu/Brass → blow/bake dry.",
 
-        safety_h:"Safety & environment (cyanide)",
-        safety_1:"Never add acid to cyanide baths/waste—risk of HCN gas.",
-        safety_2:"Wear PPE (chemical gloves, goggles, appropriate respirator) with fume extraction.",
-        safety_3:"Do post-acid steps only in dedicated tanks with safe SOPs.",
-        safety_4:"Treat cyanide waste per law (oxidize to cyanate in alkali, etc.) and monitor pH.",
-        safety_5:"Emergency: eye contact—flush with water ≥15 minutes and seek medical care.",
+      cnbr_h: "Cyanide Brass Plating",
+
+      cnbr_comp_h: "Bath Components",
+      cnbr_comp_1: "Cyanide: The primary complexing agent that keeps copper and zinc in solution and enables their co-deposition as a uniform brass alloy on the work surface.",
+      cnbr_comp_2: "Copper and zinc: The source metals for the brass layer. Their ratio governs color tone and mechanical properties of the deposit.",
+      cnbr_comp_3: "Ammonia: Stabilizes the bath and helps achieve a consistent brass color while reducing stains and shade variation.",
+
+      cnbr_make_h: "Bath Make-up and Equipment",
+      cnbr_make_new_h: "New Bath Make-up",
+      cnbr_make_1: "Clean and charge: Thoroughly clean the tank, then add deionized water to about two thirds of the final volume and begin agitation.",
+      cnbr_make_2: "Dissolve chemicals: Gradually add Meta Salt with agitation until fully dissolved, then add ammonium chloride (NH4Cl) to maintain the ammonia balance.",
+      cnbr_make_3: "Adjust volume and pH: Top up to final volume and adjust pH with sodium hydroxide (NaOH) into the recommended range. Never add acid to any solution containing cyanide.",
+
+      cnbr_equip_h: "Required Equipment",
+      cnbr_equip_1: "Plating tank: Welded steel tank or a tank lined with PVC or rubber, resistant to alkaline cyanide solutions.",
+      cnbr_equip_2: "Heating and ventilation: Process heater for warm operation together with efficient fume extraction and room ventilation.",
+      cnbr_equip_3: "Anodes and fixtures: Rigid anode/cathode bars and alkaline-resistant anode bags for brass anodes or separate copper/zinc anodes.",
+
+      cnbr_maint_h: "Control and Maintenance",
+      cnbr_maint_1: "Weekly analysis: Copper 8.5–9.5 g/L, zinc 7.5–8.5 g/L, free NaCN 14–16 g/L.",
+      cnbr_maint_2: "Start-up period: Add Ammonium chloride NH4Cl 2–3 g/L daily to maintain the ammonia balance and color stability.",
+      cnbr_maint_3: "Total strength adjustment: To raise Baumé by 1 degree, add about 15 g/L Meta Salt, always pre-dissolved in water before addition.",
+      cnbr_maint_4: "Run records: Log temperature, current, and all additions every shift to enable trend tracking and troubleshooting.",
+
+      cnbr_flow_h: "Recommended Process Sequence",
+      cnbr_flow_1: "Alkaline soak clean B1 at 40–60 g/L, 80 °C for 2–5 minutes, then rinse.",
+      cnbr_flow_2: "Electro-clean E-60 at 80 g/L, 70 °C for 2–3 minutes at 50–100 ASF, then rinse.",
+      cnbr_flow_3: "Acid dip 10–15% v/v at room temperature for about 30 seconds, then rinse.",
+      cnbr_flow_4: "Nickel strike as appropriate for the substrate, then rinse.",
+      cnbr_flow_5: "Brass plate to at least 0.6–1.0 µm, then rinse.",
+      cnbr_flow_6: "Sulfuric acid dip 2–3% in a separate, ventilated tank to remove cyanide residues from the surface, then rinse.",
+      cnbr_flow_7: "Anti-tarnish dip for copper/brass, then blow off or dry.",
+
+      safety_h: "Safety and Environment (Cyanide)",
+      safety_1: "Never add acid to a bath or waste stream containing cyanide, as lethal hydrogen cyanide gas can form.",
+      safety_2: "Wear appropriate personal protective equipment: chemical-resistant gloves, safety goggles, and a suitable respirator, and operate with fume extraction.",
+      safety_3: "Carry out post-plate acid dips only in a separate tank and follow strict safe operating procedures.",
+      safety_4: "Treat cyanide-bearing wastewater in compliance with regulations by oxidizing to cyanate under alkaline conditions and continuously monitoring pH.",
+      safety_5: "In case of eye exposure, flush with clean water continuously for at least 15 minutes and seek medical attention immediately.",
 
         addr_l1:"📍 31 Soi Phetkasem 48 Yak 24, Bang Waek",
         addr_l2:"📍 Phasi Charoen, Bangkok 10160",
