--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -283,7 +283,7 @@
       <section id="makeup" class="reveal section-block" aria-labelledby="makeup-h">
         <h2 id="makeup-h" class="section" data-i18n-key="makeup_h">ส่วนที่ 1: การเตรียมสารละลาย (Make-up)</h2>
 
-        <p class="lead" data-i18n-key="ratio_h">สัดส่วนแนะนำ</p>
+        <h3 class="features__title" data-i18n-key="ratio_h">สัดส่วนแนะนำ</h3>
         <div class="table">
           <table>
             <thead>
@@ -329,7 +329,7 @@
           </table>
         </div>
 
-        <p class="lead" data-i18n-key="make_steps_h">ขั้นตอนการผสม</p>
+        <h3 class="features__title" data-i18n-key="make_steps_h">ขั้นตอนการผสม</h3>
         <div class="content">
           <ul>
             <li data-i18n-key="make_s1">เติมน้ำกลั่น ~50% ของปริมาตรบ่อ</li>
@@ -367,7 +367,7 @@
       <section id="conditions" class="reveal section-block" aria-labelledby="cond-h">
         <h2 id="cond-h" class="section" data-i18n-key="cond_h">ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น</h2>
 
-        <p class="lead" data-i18n-key="cond_params_h">สภาพการทำงาน</p>
+        <h3 class="features__title" data-i18n-key="cond_params_h">สภาพการทำงาน</h3>
         <div class="table">
           <table>
             <thead>
@@ -393,7 +393,7 @@
           </table>
         </div>
 
-        <p class="lead" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</p>
+        <h3 class="features__title" class="section" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</h3>
         <div class="content">
           <ul>
             <li data-i18n-key="equip_1">บ่อชุบ: บุด้วยคลอโรซีล, PVC, PE หรือ PP</li>
@@ -510,50 +510,58 @@
         ratio_c5:"BASn 4142 (Additive)", ratio_c5_rec:"4", ratio_c5_std:"-",
         ratio_unit_gpl:"กรัม/ลิตร", ratio_unit_ccl:"ซีซี/ลิตร",
 
-        make_steps_h:"ขั้นตอนการผสม",
-        make_s1:"เติมน้ำกลั่น ~50% ของปริมาตรบ่อ",
-        make_s2:"เติมกรดกำมะถันช้า ๆ พร้อมคน สารละลายจะร้อน ⚠️ เติมกรดลงในน้ำเสมอ ห้ามเติมน้ำลงในกรด รอเย็นถึงอุณหภูมิห้อง",
-        make_s3:"เติมสแตนนัสซัลเฟต 3 กก. คนจนละลายหมด",
-        make_s4:"เติมน้ำกลั่นเพิ่มจน ~90% ของปริมาตร",
-        make_s5:"เปิดระบบทำความเย็นให้อ่าง ~25°C แล้วผสม BASn 4140/4141/4142 แยกกันในน้ำ 1:1 ก่อนเท",
-        make_s6:"เติม BASn 4140 (Make-up) → คน",
-        make_s7:"เติม BASn 4141 (Brightener) → คน",
-        make_s8:"เติม BASn 4142 (Additive) → คน",
-        make_s9:"ปรับปริมาตรสุดท้ายด้วยน้ำกลั่น",
-        make_warn1:"เติมกรดลงในน้ำเสมอ ห้ามเติมน้ำลงในกรด",
-        make_warn2:"ห้ามเติม BASn 4140/4141/4142 ในอุณหภูมิ > 30°C",
+      make_steps_h: "ขั้นตอนการผสมน้ำยา",
+      make_s1: "เติมน้ำกลั่นประมาณ 50% ของปริมาตรบ่อชุบ",
+      make_s2: "ค่อยๆ เติมกรดกำมะถันลงในน้ำพร้อมคนอย่างต่อเนื่อง สารละลายจะร้อน ให้รอจนเย็นถึงอุณหภูมิห้อง",
+      make_s3: "เติมสแตนนัสซัลเฟต 3 กิโลกรัม แล้วคนจนละลายหมด",
+      make_s4: "เติมน้ำกลั่นเพิ่มจนได้ประมาณ 90% ของปริมาตรบ่อ",
+      make_s5: "เปิดระบบทำความเย็นให้อ่างอยู่ราว 25 °C จากนั้นผสม BASn 4140, 4141, 4142 แยกกันในน้ำอัตรา 1:1 ก่อนเทลงบ่อ",
+      make_s6: "เติม BASn 4140 (Make-up) แล้วคนให้เข้ากัน",
+      make_s7: "เติม BASn 4141 (Brightener) แล้วคนให้เข้ากัน",
+      make_s8: "เติม BASn 4142 (Additive) แล้วคนให้เข้ากัน",
+      make_s9: "ปรับปริมาตรสุดท้ายด้วยน้ำกลั่นให้ครบ",
+      make_warn1: "เติมกรดลงในน้ำเสมอ ห้ามเติมน้ำลงในกรด",
+      make_warn2: "ห้ามเติม BASn 4140/4141/4142 ในอุณหภูมิสูงกว่า 30 °C",
 
-        process_h:"ส่วนที่ 2: ขั้นตอนการชุบ",
-        proc_1:"เตรียมชิ้นงาน: ทำความสะอาด/รองพื้นตามเหมาะสม",
-        proc_2:"กระตุ้นผิว: จุ่มกรดกำมะถัน 5–10%",
-        proc_3:"ล้างน้ำสะอาด",
-        proc_4:"ชุบดีบุก: ลงบ่อ BASn 4140",
-        proc_5:"ล้างน้ำ 2–3 ขั้น",
-        proc_6:"จุ่มด่าง: โซดาไฟ 2–5% เพื่อล้างผิว",
-        proc_7:"ล้างน้ำ 2–3 ขั้น",
-        proc_8:"อบแห้ง",
+      /* Process steps */
+      process_h: "ส่วนที่ 2: ขั้นตอนการชุบ",
+      proc_1: "เตรียมชิ้นงาน ทำความสะอาดและทำชั้นรองพื้นตามความเหมาะสม",
+      proc_2: "กระตุ้นผิว จุ่มกรดกำมะถัน 5–10%",
+      proc_3: "ล้างน้ำสะอาด",
+      proc_4: "ชุบดีบุก ลงบ่อ BASn 4140 ตามพารามิเตอร์ที่กำหนด",
+      proc_5: "ล้างน้ำ 2–3 ขั้น",
+      proc_6: "จุ่มด่าง โซดาไฟ 2–5% เพื่อล้างผิว",
+      proc_7: "ล้างน้ำ 2–3 ขั้น",
+      proc_8: "อบแห้ง",
 
-        cond_h:"ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น",
-        cond_params_h:"สภาพการทำงาน",
-        cond_th_param:"พารามิเตอร์", cond_th_rec:"ค่าแนะนำ",
-        cond_temp:"อุณหภูมิ", cond_temp_v:"18–24 °C",
-        cond_cd:"ความหนาแน่นกระแสไฟ", cond_cd_v:"0.5–5 A/dm²",
-        cond_anode:"ตัวล่อ (แอโนด)", cond_anode_v:"ดีบุกบริสุทธิ์ 99.9% หุ้มถุงผ้าทนกรด",
-        equip_h:"อุปกรณ์ที่จำเป็น",
-        equip_1:"บ่อชุบ: บุด้วยคลอโรซีล, PVC, PE หรือ PP",
-        equip_2:"ท่อทำความเย็น: เทฟลอน",
-        equip_3:"เครื่องกรอง: ไส้กรอง 10 ไมครอน",
-        equip_4:"ระบบกวน: ถังแขวนใช้การแกว่งชิ้นงานช่วยกวนได้",
+      /* Conditions & equipment */
+      cond_h: "ส่วนที่ 3: สภาพการทำงานและอุปกรณ์ที่จำเป็น",
+      cond_params_h: "สภาพการทำงาน",
+      cond_th_param: "พารามิเตอร์",
+      cond_th_rec: "ค่าแนะนำ",
+      cond_temp: "อุณหภูมิ",
+      cond_temp_v: "18–24 °C",
+      cond_cd: "ความหนาแน่นกระแสไฟ",
+      cond_cd_v: "0.5–5 A/dm²",
+      cond_anode: "ตัวล่อ (แอโนด)",
+      cond_anode_v: "ดีบุกบริสุทธิ์ 99.9% ใส่ถุงผ้าทนกรด",
 
-        anode_h:"ทำไมต้องใช้แผ่น Tin Anode บริสุทธิ์ 99.9%?",
-        anode_p0:"คุณภาพแอโนดมีผลโดยตรงต่อคุณภาพการชุบดีบุก—ดีบุกไวต่อสิ่งเจือปน จึงควรใช้แอโนดบริสุทธิ์ 99.9% เพื่อผลงานสม่ำเสมอและเสถียร",
-        anode_1_h:"1) ป้องกันการปนเปื้อนในบ่อชุบ",
-        anode_1_p:"แอโนดบริสุทธิ์ต่ำอาจมี Pb/Sb/Bi ปน เมื่อหลุดลงบ่อจะลดประสิทธิภาพน้ำยา ทำให้ผิวหมองและความหนาไม่สม่ำเสมอ",
-        anode_2_h:"2) รักษาสมดุลและความเสถียรของสารละลาย",
-        anode_2_p:"ดีบุกที่ละลายจากแอโนดบริสุทธิ์มีความสม่ำเสมอ ช่วยควบคุมความเข้มข้นโลหะได้แม่นยำ",
-        anode_3_h:"3) ยืดอายุการใช้งานของบ่อชุบ",
-        anode_3_p:"ลดการสะสมสิ่งเจือปน ลดการถ่ายทิ้ง/ผสมใหม่ ช่วยประหยัดค่าใช้จ่ายระยะยาว",
-        anode_foot:"เราจำหน่าย Tin Anode บริสุทธิ์ 99.9% เพื่อคุณภาพงานชุบดีบุกที่ไว้ใจได้ทุกครั้ง",
+      equip_h: "อุปกรณ์ที่จำเป็น",
+      equip_1: "บ่อชุบ บุด้วยคลอโรซีล PVC PE หรือ PP",
+      equip_2: "ท่อทำความเย็น เทฟลอน",
+      equip_3: "เครื่องกรอง ไส้กรอง 10 ไมครอน",
+      equip_4: "ระบบกวน สำหรับถังแขวนใช้การแกว่งชิ้นงานช่วยกวน",
+
+      /* Tin anode section */
+      anode_h: "เหตุผลที่ควรใช้แผ่นแอโนดดีบุกบริสุทธิ์ 99.9%",
+      anode_p0: "คุณภาพแอโนดมีผลโดยตรงต่อคุณภาพการชุบดีบุก ดีบุกไวต่อสิ่งเจือปน จึงควรใช้แอโนดบริสุทธิ์ 99.9% เพื่อความสม่ำเสมอและความเสถียรของบ่อ",
+      anode_1_h: "1) ป้องกันการปนเปื้อนในบ่อชุบ",
+      anode_1_p: "หากใช้แอโนดที่มีความบริสุทธิ์ต่ำ อาจมีโลหะปนเปื้อน เช่น ตะกั่ว (Pb), พลวง (Sb), หรือบิสมัท (Bi) หลุดลงไปในบ่อ ทำให้ประสิทธิภาพของน้ำยาชุบลดลง และส่งผลให้ผิวเคลือบหมองหรือไม่สม่ำเสมอ",
+      anode_2_h: "2) รักษาสมดุลและความเสถียรของสารละลาย",
+      anode_2_p: "ดีบุกที่ละลายออกจากแอโนดบริสุทธิ์มีความสม่ำเสมอสูง ช่วยให้สามารถควบคุมความเข้มข้นของโลหะในน้ำยาได้อย่างแม่นยำ",
+      anode_3_h: "3) ยืดอายุการใช้งานของบ่อชุบ",
+      anode_3_p: "การลดการสะสมของสิ่งเจือปนในระยะยาวจะช่วยลดความถี่ในการถ่ายน้ำยาทิ้งและผสมน้ำยาใหม่ ซึ่งช่วยประหยัดค่าใช้จ่ายได้อย่างมาก",
+      anode_foot: "เราจัดจำหน่ายแผ่นแอโนดดีบุกบริสุทธิ์ 99.9% เพื่อคุณภาพงานชุบดีบุกที่มั่นใจได้",
 
         footer_products:"หมวดผลิตภัณฑ์", footer_contact:"ติดต่อเรา", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       },
@@ -589,50 +597,58 @@
         ratio_c5:"BASn 4142 (Additive)",   ratio_c5_rec:"4", ratio_c5_std:"-",
         ratio_unit_gpl:"g/L", ratio_unit_ccl:"cc/L",
 
-        make_steps_h:"Make-up steps",
-        make_s1:"Add DI water to ~50% of tank volume.",
-        make_s2:"Slowly add sulfuric acid with stirring; solution will heat up. ⚠️ Always add acid to water, never water to acid. Let cool to room temperature.",
-        make_s3:"Add 3 kg stannous sulfate; stir until fully dissolved.",
-        make_s4:"Add DI water to ~90% of final volume.",
-        make_s5:"Start cooling to ~25 °C, then pre-dilute BASn 4140/4141/4142 separately 1:1 with water before charging.",
-        make_s6:"Charge BASn 4140 (Make-up) and mix.",
-        make_s7:"Charge BASn 4141 (Brightener) and mix.",
-        make_s8:"Charge BASn 4142 (Additive) and mix.",
-        make_s9:"Top up with DI water to final volume.",
-        make_warn1:"Always add acid to water; never water to acid.",
-        make_warn2:"Do not add BASn 4140/4141/4142 when bath > 30 °C.",
+      make_steps_h: "Bath Make-up Steps",
+      make_s1: "Add deionized water to about 50% of the tank volume.",
+      make_s2: "Slowly add sulfuric acid into water with continuous stirring; the solution will heat up. Let it cool to room temperature.",
+      make_s3: "Add 3 kg stannous sulfate and stir until fully dissolved.",
+      make_s4: "Top up with DI water to ~90% of final volume.",
+      make_s5: "Start cooling to ~25 °C, then pre-dilute BASn 4140, 4141, 4142 separately 1:1 with water before adding to the tank.",
+      make_s6: "Add BASn 4140 (Make-up) and mix thoroughly.",
+      make_s7: "Add BASn 4141 (Brightener) and mix thoroughly.",
+      make_s8: "Add BASn 4142 (Additive) and mix thoroughly.",
+      make_s9: "Adjust to final volume with DI water.",
+      make_warn1: "Always add acid to water, never water to acid.",
+      make_warn2: "Do not add BASn 4140/4141/4142 when bath temperature exceeds 30 °C.",
 
-        process_h:"Part 2: Plating steps",
-        proc_1:"Prep part: clean / appropriate undercoats as needed.",
-        proc_2:"Activate: dip in 5–10% H₂SO₄.",
-        proc_3:"Rinse well.",
-        proc_4:"Bright tin plate in BASn 4140.",
-        proc_5:"Rinse 2–3 stages.",
-        proc_6:"Alkaline dip: 2–5% NaOH to de-film.",
-        proc_7:"Rinse 2–3 stages.",
-        proc_8:"Dry/bake dry.",
+      /* Process steps */
+      process_h: "Part 2: Plating Steps",
+      proc_1: "Prepare parts: clean and apply undercoat as appropriate.",
+      proc_2: "Activate: dip in sulfuric acid 5–10%.",
+      proc_3: "Rinse with clean water.",
+      proc_4: "Tin plate: load into BASn 4140 bath per parameters.",
+      proc_5: "Rinse 2–3 stages.",
+      proc_6: "Alkaline dip: sodium hydroxide 2–5% to clean the surface.",
+      proc_7: "Rinse 2–3 stages.",
+      proc_8: "Dry or bake to dry.",
 
-        cond_h:"Part 3: Operating conditions & required equipment",
-        cond_params_h:"Operating window",
-        cond_th_param:"Parameter", cond_th_rec:"Recommended",
-        cond_temp:"Temperature", cond_temp_v:"18–24 °C",
-        cond_cd:"Current density", cond_cd_v:"0.5–5 A/dm²",
-        cond_anode:"Anode", cond_anode_v:"99.9% pure tin sheet in acid-resistant bags",
-        equip_h:"Required equipment",
-        equip_1:"Tank: lined with Chlorosulphorinated PE (CSP), PVC, PE, or PP",
-        equip_2:"Cooling coils: PTFE (Teflon)",
-        equip_3:"Filtration: 10 µm cartridge",
-        equip_4:"Agitation: for rack, use work-swing or mild movement",
+      /* Conditions & equipment */
+      cond_h: "Part 3: Operating Conditions and Required Equipment",
+      cond_params_h: "Operating Conditions",
+      cond_th_param: "Parameter",
+      cond_th_rec: "Recommended",
+      cond_temp: "Temperature",
+      cond_temp_v: "18–24 °C",
+      cond_cd: "Current density",
+      cond_cd_v: "0.5–5 A/dm²",
+      cond_anode: "Anode",
+      cond_anode_v: "Tin anode 99.9% in acid-resistant bags",
 
-        anode_h:"Why 99.9% Tin Anode?",
-        anode_p0:"Anode quality directly impacts tin deposit quality. Tin is sensitive to impurities; 99.9% purity ensures stable, consistent performance.",
-        anode_1_h:"1) Prevents bath contamination",
-        anode_1_p:"Lower-purity anodes introduce Pb/Sb/Bi, degrading chemistry, dulling deposits, and causing uneven thickness.",
-        anode_2_h:"2) Keeps bath balance stable",
-        anode_2_p:"Dissolution from high-purity tin is consistent, making metal control precise.",
-        anode_3_h:"3) Extends bath life",
-        anode_3_p:"Less impurity build-up means fewer dumps/remakes and lower long-term cost.",
-        anode_foot:"We supply 99.9% Tin Anodes for dependable bright tin results.",
+      equip_h: "Required Equipment",
+      equip_1: "Plating tank lined with chlorinated rubber, PVC, PE, or PP.",
+      equip_2: "Cooling coils made of PTFE (Teflon).",
+      equip_3: "Filtration with 10-micron cartridges.",
+      equip_4: "Agitation system; for rack tanks, part rocking can assist.",
+
+      /* Tin anode section */
+      anode_h: "Why Use 99.9% Pure Tin Anodes?",
+      anode_p0: "Anode purity directly affects tin plating quality. Tin is sensitive to impurities; 99.9% purity helps keep deposits uniform and the bath stable.",
+      anode_1_h: "1) Prevent bath contamination",
+      anode_1_p: "Impurities such as Pb, Sb, or Bi from low-purity anodes can leach into the bath, dulling deposits and causing non-uniform thickness.",
+      anode_2_h: "2) Maintain solution balance and stability",
+      anode_2_p: "Consistent dissolution from high-purity anodes helps accurately control metal concentration and ensures steady operation.",
+      anode_3_h: "3) Extend bath life",
+      anode_3_p: "Less impurity build-up means fewer dump-and-remake cycles and lower long-term cost.",
+      anode_foot: "We supply 99.9% pure tin anodes for reliable, high-quality tin plating results.",
 
         footer_products:"Products", footer_contact:"Contact Us", footer_copy:"© 2025 Baume Chemical. All rights reserved."
       }
